--- a/PCFC9EA3B.opf/meta.yml
+++ b/PCFC9EA3B.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     c82ed9e6ca4d49389de7e32f06fbcb48:
       base_file: v043.txt
       image_group_id: I1PD95888
-      title: ''
+      title: གཡུའི་ཐང་མ་ཀྲས་དགུ།
       total_pages: 1379
       volume_number: 43
