--- a/D0AE1085E.opf/index.yml
+++ b/D0AE1085E.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   fbf04aadbd754609ae46128402546df7:
     parts: {}
+    work_id: N3518
     span:
-    - vol: 43
+    - base: c246
       start: 0
       end: 18178
-    work_id: N3518
